# CodeQuest

./: .gitignore  CMakeFromCppExpertNoob.txt  CMakeLists.txt  CMakeSettings.json  Contributing.md  Dockerfile  EMSCRIPTEN_BUILD_GUIDE.txt  LICENSE  Readme.md  emscripten_build.sh  win_docker_build.bat
.github/workflows/: WebBuild.yml
HelloRaylib/: HelloRaylib.html  HelloRaylib.js  HelloRaylib.wasm
Pong/: Pong.data  Pong.html  Pong.js  Pong.wasm
Tetris/: Tetris.data  Tetris.html  Tetris.js  Tetris.wasm
build_tools/: emscripten_build.sh  windows_docker_build_web.bat
libs/em/Raylib-3.0/libs/: libraylib.bc  libraylib.wasm
projects/: main.cpp
projects/HelloRaylib/: CMakeLists.txt
projects/HelloRaylib/inc/: Application.h
projects/HelloRaylib/src/: Application.cpp  Game.cpp
projects/Pong/: CMakeLists.txt
projects/Pong/inc/: Animation.h  Application.h  Controls.h  Game.h  HelperFunctions.h  Position.h  Sprite.h  StrengthAttributes.h  Velocity.h
projects/Pong/json/: charisma.json  constitution.json  dexterity.json  intelligence.json  strength.json  wisdom.json
projects/Pong/src/: Application.cpp  Controls.cpp  Game.cpp  HelperFunctions.cpp  StrengthAttributes.cpp  main.cpp
projects/Tetris/: CMakeLists.txt
projects/Tetris/inc/: Application.h  Block.h  Colors.h  Game.h  Grid.h  Position.h
projects/Tetris/src/: Application.cpp  Block.cpp  Blocks.cpp  Colors.cpp  Game.cpp  Grid.cpp  Position.cpp
